--- a/bootcamp/scanner/templates/scanner/sample.html
+++ b/bootcamp/scanner/templates/scanner/sample.html
@@ -10,6 +10,8 @@
   <link href="{% static 'css/profile.css' %}" rel="stylesheet">
   <link href="{% static 'css/projects.css' %}" rel="stylesheet">
   <script src="{% static 'js/projects.js' %}"></script>
+  <link href="{% static 'css/samples.css' %}" rel="stylesheet">
+  <script src="{% static 'js/samples.js' %}"></script>
   <!-- Add jQuery library -->
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   <!-- Add mousewheel plugin (this is optional) -->
@@ -67,51 +69,63 @@
       </div>
 
       <div class="col-md-9">
+          <div class="row">
           <div class="col-md-12">
             <h1>Scanner wizard</h1>
               <div class="stepwizard">
     <div class="stepwizard-row">
         <div class="stepwizard-step">
-            <a href="{% url 'scan_main' %}"><button type="button" class="btn btn-danger btn-circle">1</button></a>
+            <button type="button" class="btn btn-danger btn-circle">1</button>
             <br/>
             <span class="stepwizard-text">Scan user</span>
         </div>
         <div class="stepwizard-step">
-            <button type="button" class="btn btn-primary btn-circle">2</button>
+            <a href="{% url 'scan_sample' identification%}"><button type="button" class="btn btn-primary btn-circle">2</button></a>
             <br/>
-            <span class="stepwizard-text stepwizard-current">Scan Sample</span>
+            <span class="stepwizard-text">Scan Sample</span>
         </div>
         <div class="stepwizard-step">
             <button type="button" class="btn btn-success btn-circle" disabled="disabled">3</button>
             <br/>
-            <span class="stepwizard-text">Scan Device</span>
+            <span class="stepwizard-text stepwizard-current">Scan Device</span>
         </div>
     </div>
 </div>
 
-              <h2>{{ page_user.profile.get_screen_name }}'s projects</h2>
-            <section class="projects">
-                <ul>
-                {% for project in projects %}
-                  <li><h3><a href="{% url 'scan_project' identification=identification project_name=project.slug %}">{{ project.title }}</a></h3></li>
-                {% empty %}
-                  <h4 class="no-data">{% trans 'There is no published project yet' %}. <a href="{% url 'write' %}">{% trans 'Be the first one to publish' %}!</a></h4>
-                {% endfor %}
-                </ul>
-           </section>
-            <!--<div class="load">-->
-              <!--<img src="{% static 'img/loading.gif' %}">-->
-            <!--</div>-->
-            <form method="get" action="{% url 'load' %}" id="load_feed" autocomplete="off">
-              <input type="hidden" name="feed_source" id="feed_source" value="{{ page_user.pk }}">
-              <input type="hidden" name="from_feed" value="{{ from_feed }}">
-              <input type="hidden" name="page" value="{{ page }}">
-            </form>
-          </div>
-
     </div>
+              </div>
+          <div class="row">
+          <h2>Existing sample scanned: <span style="color:gray;"><em>{{ sample.name }}</em></span></h2>
+          <div class="col-md-9">
+<div class="table-responsive">
+                        <table class="table table-striped table-bordered">
+                            <tr>
+                                <th>Sample Name</th>
+                                <th>Sample ID</th>
+                                <th>Tags</th>
+                                <th>Description</th>
+                            </tr>
+                                <td><a href="{% url 'sample' sample.slug %}">{{ sample.name}}</a></td>
+                                <td>{{sample.identification}}</td>
+                                <td>{% for tag in sample.get_tags %}
+        <a href="{% url 'sample_tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
+      {% endfor %}</td>
+                                <td>{{sample.description | safe}}</td>
+                        </table>
+                            <div class="col-md-12">
+
+                                <div class="panel panel-default">
+                                    <div class="panel-heading"><h3>Project: <span><a href="{% url 'project' sample.project.slug %}">{{ sample.project.title }} </a></span></h3></div>
+                                    <div class="panel-body">{{ sample.project.description | safe}}</div>
+                                </div>
+	  </div>
+                    </div>
+
   </div>
   </div>
+
+          </div>
+      </div>
 
   <script type="text/javascript">
       $(document).ready(function() {
