--- a/bootcamp/scanner/templates/scanner/wizard.html
+++ b/bootcamp/scanner/templates/scanner/wizard.html
@@ -47,12 +47,12 @@
         <div class="stepwizard-step">
             <button type="button" class="btn btn-primary btn-circle" disabled="disabled">2</button>
             <br/>
-            <span class="stepwizard-text">Select Project</span>
+            <span class="stepwizard-text">Scan Sample</span>
         </div>
         <div class="stepwizard-step">
             <button type="button" class="btn btn-success btn-circle" disabled="disabled">3</button>
             <br/>
-            <span class="stepwizard-text">Collect samples</span>
+            <span class="stepwizard-text">Scan Device</span>
         </div>
     </div>
 </div>
